/* $Id: changelog,v 1.1733 2001-10-10 17:21:27 sandervl Exp $ */

 2001-10-10: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Do not blindly add ODIN_FUNCTION macros to functions that
                  get called very often. (like IsWindow, GetParent & IsWindowVisible)
                  This tends to make logfiles very big...
    - WSOCK32:  o Added IP_ADD_MEMBERSHIP, IP_DROP_MEMBERSHIP, IP_MULTICAST_LOOP &
                  IP_MULTICAST_TTL to setsockopt
                o Add support for WS2_32 IPPROTO_IP options
    - WS2_32:   o Translate IPPROTO_IP options in setsockopt before calling
                  wsock32
    - DDRAW:    o Commented out DiveAcquire/DeaquireFrameBuffer for now
                  (surflock/unlock)

 2001-10-10: Patrick Haller <patrick.haller@innotek.de>
    - KERNEL32: o added IOCTL_CDROM_EJECT_MEDIA
                        IOCTL_CDROM_LOAD_MEDIA
                        IOCTL_CDROM_PAUSE_AUDIO
                        IOCTL_CDROM_STOP_AUDIO
                        IOCTL_CDROM_RESUME_AUDIO
                        IOCTL_CDROM_PLAY_AUDIO_MSF
                o added IOCTL_STORAGE_EJECT_MEDIA
                        IOCTL_STORAGE_LOAD_MEDIA
                        IOCTL_DISK_EJECT_MEDIA
                        IOCTL_DISK_CHECK_VERIFY

 2001-10-09: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Image header page must be readonly
                o Temporarily disabled high memory usage for heap

 2001-10-08: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o enabled WH_KEYBOARD_LL hook, seems to work
                o added further messages to wndmsg.cpp
    - KERNEL32: o added further error codes to error2WinError

 2001-10-08: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o WM_WINDOWPOSCHANGED: activation fix; must clear FF_NOACTIVATESWP
                  if mp2 & AWP_ACTIVATE
                  (fixes activation of some inactive windows; used to be
                   activated but not brought to the top)
